--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  background-color: rgb(243, 164, 60);
+  font-family: 'Marker Felt, fantasy';
+  background-color: rgba(232, 221, 248, 0.856);
 }
